syntax = "proto3";

package proto.pricing.v1;
option java_package = "io.gprc.longlivedstreams.proto.pricing.v1";
option java_multiple_files = true;
option java_outer_classname = "PricingProvider";

 enum SubscriptionType {
     FULL_FLOW = 0;
     THROTTLING = 1;
     PERSISTENT = 2;
 }

 service PricingService {
     rpc SubscribeForPriceUpdate (PriceSubscriptionRequest) returns (stream PriceUpdate) {
     }
 }

 message PriceSubscriptionRequest {
     string clientId = 1;
     SubscriptionType subscriptionType = 2;
 }

message PriceUpdate {
    int64 instrumentId = 1;
    double price = 2;
    bytes auxiliaryInfo = 3;
}








